--- a/TabConverter.html
+++ b/TabConverter.html
@@ -139,7 +139,7 @@ function compressTab() {
  <button type="button" onclick="compressTab()">Compress Tab</button>
  <br>
  <textarea id="TabInput" cols="100" rows="20">Enter tablature here:
-Below is an example from "Hey Jude" 
+Below is an example from "Hey Jude".  Doot doot 'n' doo
 from http://tabs.ultimate-guitar.com/b/beatles/hey_jude_crd.htm
 
         F                C   
