testing out google gadget.  this html should stand alone

--- a/TabConverter.html
+++ b/TabConverter.html
@@ -1,5 +1,6 @@
 <head>
 <script type="text/javascript" src="https://raw.github.com/iamstein/ukeskywalker/master/compressTab.js"></script>
+<!--<script type="text/javascript" src="compressTab.js"></script>-->
 </head>
 <body>
 <!--TAB TO BE COMPRESSED-->
@@ -7,41 +8,54 @@
  <button type="button" onclick="compressTab()">Compress Tab</button>
  <br>
  <textarea id="TabInput" cols="100" rows="20">Enter tablature here:
-Below is an example from "Hey Jude".  Doot doot 'n' doo
-from http://tabs.ultimate-guitar.com/b/beatles/hey_jude_crd.htm
+E
+I'm scratching at the surface now
 
-        F                C   
-  Hey Jude dont make it bad      
-       F  C7   C7sus4      C7       F  
-  take a  sad   song  and make it better
-   Bb                           F     
-  Remember to let her into your heart 
-                     C               F
-  and then you can start to make it better
-        F              C         
-  Hey Jude dont be afraid
-        F   C7   C7sus4      C7      F
-  you were made    to  go   out and get her
-       Bb                            F            
-  The minute you let her under your skin
-             C                F   Fmaj7 F7
-  then you begin to make it better
+C#m
+And I'm trying hard to work it out
+
+E
+So much has gone misunderstood
+
+C#m
+This mystery only leads to doubt
+
+F#m
+And I didn't understand
+
+Abm                                 Am
+When you reached out to take my hand
+
+Abm                          F#m
+And if you have something to say
+
+B
+You'd better say it now
 
 
-                            Bb      Bb/A   Gm     
-  And anytime you feel the pain hey jude refrain
-        Gm7       C/E   C            F    Fmaj7 F7
-  dont carry the world upon your shoulders 
-                                Bb      Bb/A      Gm   
-  For well you know that its a fool who plays it cool
-       Gm7       C/E       C      F
-  by making his world  a little colder
 
-  
-        F6 F7      C  Csus4  CaddG       C  F  C7
-  Da da da da da   Da   da    da    da 
+E                         Abm
+Cause this is what you've waited for
+C#m                        A
+Your chance to even up the score
+E                Abm           C#m
+And as these shadows fall on me now
+A
+I will somehow
 
- </textarea>
+
+E                              Abm
+Cause I'm picking up a message Lord
+C#m                               A
+And I'm closer than I've ever been before
+
+
+E                          B                  A
+So if you have something to say Say it to me now
+B              A
+Say it to me now
+B              A
+Say it to me now </textarea>
 
 <!--COMPRESSED TAB OUTPUT-->
  <h3> Compressed Tab </h3>
